Additional dark mode fixes
git-svn-id: file:///home/svn/DVA2006@18005 1e6d2d28-e1fb-0310-b8ab-81908d8c6b6a

--- a/static/css/legacy/view.css
+++ b/static/css/legacy/view.css
@@ -127,7 +127,7 @@ table.view :link:hover {
 		color: #00b000;
 	}
 
-	table.view a.pri, table.view a.pri:visited {
+	table.view a.pri, table.view a.pri:visited, table.view *.pri {
 		color: #6080e0;
 	}
 
